k8-configuration-management/10-ubuntu-pod-node-affinity.yaml
# Example 9
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-pod-node-affinity
spec:
  affinity: 
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: type
            operator: In
            values:
            - "gpu"  
  containers:
  - image: ubuntu
    name: ubuntu
    stdin: true
    tty: true
