k8-configuration-management/13-ubuntu-pod-pod-affinity-2.yaml
# Example 13
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: appgroup1
  name: ubuntu-pod-pod-affinity-2
spec:
  affinity: 
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - topologyKey: kubernetes.io/hostname
        labelSelector:
          matchLabels:
            app: appgroup1 
  containers:
  - name: ubuntu
    image: ubuntu
    stdin: true
    tty: true
