k8-configuration-management/14-mypod.yaml
apiVersion: v1
kind: Pod 
metadata: 
  name: mypod-2
spec:
  containers:
  - image: centos
    name: centos2
    stdin: true
    tty: true
