k8-configuration-management/15-kuard-pod.yaml
#Example 15
apiVersion: v1
kind: Pod 
metadata: 
  name: kuard-3
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard-3 
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
