k8-configuration-management/8-myapp-v2-pod.yaml
#Example 8
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp-v2-pod
  name: myapp-v2-pod
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    resources:
      requests:
        # 500m = 0.5 vCPU      
        cpu: "500m"
        memory: "128Mi"
      limits:
        cpu: "500m"
        memory: "500Mi"
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
