k8-configuration-management/centos3.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cni.projectcalico.org/podIP: 10.20.1.94/32
    kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu request for container
      centos3'
  creationTimestamp: "2019-09-29T21:24:29Z"
  generateName: centos3-9784f5b4f-
  labels:
    pod-template-hash: 9784f5b4f
    run: centos3
  name: centos3-9784f5b4f-8lt9t
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: centos3-9784f5b4f
    uid: 853e147d-e2ff-11e9-943c-42010a800290
  resourceVersion: "4426377"
  selfLink: /api/v1/namespaces/default/pods/centos3-9784f5b4f-8lt9t
  uid: 854321b3-e2ff-11e9-943c-42010a800290
spec:
  containers:
  - image: centos
    imagePullPolicy: Always
    name: centos3
    resources:
      requests:
        cpu: 100m
    stdin: true
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    tty: true
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-dr7xm
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: gke-k8-cluster2-default-pool-2f85956b-k6kx
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-dr7xm
    secret:
      defaultMode: 420
      secretName: default-token-dr7xm
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2019-09-29T21:24:29Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2019-09-29T21:24:31Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2019-09-29T21:24:31Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2019-09-29T21:24:29Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://e143d9577b9bbfba8321710ac56208d476d0bf7ae1164929f80fc431996986dd
    image: centos:latest
    imageID: docker-pullable://centos@sha256:a36b9e68613d07eec4ef553da84d0012a5ca5ae4a830cf825bb68b929475c869
    lastState: {}
    name: centos3
    ready: true
    restartCount: 0
    state:
      running:
        startedAt: "2019-09-29T21:24:30Z"
  hostIP: 10.128.0.3
  phase: Running
  podIP: 10.20.1.94
  qosClass: Burstable
  startTime: "2019-09-29T21:24:29Z"
