k8-configuration-management/env-demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-demo-pod
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    command:
    - sh
    - -c
    - "sleep 10000"
