k8-configuration-management/kuard-pod929.yaml
# Example 2
apiVersion: v1
kind: Pod
metadata:
  name: kuard-pod929
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
