k8-configuration-management/mypod-labeled.yaml
# Example 3
apiVersion: v1
kind: Pod
metadata:
  name: mypod-labeled
  labels:
    app: mypod-labeled
spec:
  nodeSelector:
    type: "gpu"
  containers:
  - image: centos
    name: mypod2
    stdin: true
    tty: true
