k8-configuration-management/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx-pod
  name: nginx-pod
spec:
  containers:
  - image: nginx:1.14.0
    name: nginx
    volumeMounts:
            - name: /data
      mountPath: /usr/share/nginx/html
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
  volumes:
  - name: data
