k8-configuration-management/ubuntu-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-pod
  labels:
    app: apache 
    pod: ubuntu-pod
spec:
  containers:
  - image: ubuntu
    name: ubuntu
    stdin: true
    tty: true
