k8-configuration-management/ubuntu2-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-pod
spec:
  containers:
  - image: ubuntu
    name: ubuntu
