k8-configuration-management/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: web-pod
  name: web-pod
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
