k8-configuration-management/mysql-egress-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-egress-netpol
spec:
  podSelector:
    matchLabels:
      app: nginx-pod-test1
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: database
    ports:
    - protocol: TCP
      port: 3306
